--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">Meu primeiro app CCP3ANMCA</string>
-    <string name="dica_msg">Digite uma mensagem</string>
-    <string name="ok">Ok!</string>
+    <string name="app_name">Ciclo de Vida GPS e Mapas</string>
+    <string name="action_settings">Settings</string>
+    <string name="no_gps_no_app">Sem o GPS o aplicativo não funciona</string>
+    <string name="show_coord">Coordenadas</string>
 </resources>
